# BadaniaNaukowe

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
agents/: __init__.py  config.py  institutional.py  train_ppo.py
configs/scenarios/: full_hybrid_mock.json  provider_compare_local.json  rl_institutional_noise.json  rl_noise_only.json
core/: __init__.py  env.py  interfaces.py  mock_engine.py  models.py  real_engine.py
docs/: current_state_and_next_steps.md  project_baseline.md  running_and_flow.md
scripts/: analyze_run.py
sim/: __init__.py  experiment_logger.py  orchestrator.py  run_experiment.py  scenarios.py
swarm/: __init__.py  client.py  manager.py  models.py  personas.py  prompts.py  runtime.py
tests/: fake_real_backend.py  live_swarm_demo.py  local_swarm_smoke.py  smoke_test.py  test_models.py  test_orchestrator_logging.py  test_run_experiment_smoke.py
