[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-gabm-rl-market-sim"
version = "0.1.0"
description = "Baseline scaffold for a hybrid agent-based and reinforcement learning financial market simulator."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "gymnasium>=0.29",
    "numpy",
    "pandas",
    "pydantic",
    "stable-baselines3",
]

[project.scripts]
market-baseline = "main:main"

[tool.setuptools]
packages = ["core", "agents", "swarm", "sim"]
